@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{565, 70}, {1027, 1104}}</string>
+	<string>{{592, 72}, {1027, 1104}}</string>
 </dict>
 </plist>
