@@ -1,3 +1,7 @@
+2007-11-05  Satoshi Nakagawa <artension@gmail.com>
+
+	Fixed a bug, exceptions from Socket.getaddrinfo should be caught.
+
 2007-11-04  Satoshi Nakagawa <artension@gmail.com>
 
 	Updated SACrashReporter.
